--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wilian Daniel Rodriguez</title>
   <link rel="stylesheet" href="Style.css">
-  <link rel="icon" type="umgpng" href="Fotos/umg.png">   
+  <link rel="icon" type="umgpng" href="Fotos/umg.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">   
 </head>
 <frameset cols="20%,80%">
   <frame src="menu.html" name="menu" scrolling="no" noresize>
