--- a/Galeria.html
+++ b/Galeria.html
@@ -18,7 +18,7 @@
     <figcaption>Foto en cena formal</figcaption>
   </figure>
   <figure>
-    <img src="Fotos/mi madrecita.png madrecita.png" alt="Imagen 4">
+    <img src="Fotos/mi madrecita.png" alt="Imagen 4">
     <figcaption>Mi amada Madre</figcaption>
   </figure>
   <figure>
